--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
@@ -98,11 +98,9 @@
                         <span>GAME</span> GAME <span>GAME</span>
                     </p>
 
-                    <!-- 슬라이드배너처럼 계속 움직이게 적용 -->
-                    <!-- 또는 텍스트 글리치 -->
+
                 </div><!-- .title end -->
                 <div class="arti">
-                    <!-- .arti 가 선으로 있다가 클릭시 내려옴 -->
                     <div class="img">
                         <img src="img/story1.jpg" alt="">
                     </div>
@@ -402,16 +400,13 @@
                             <div>EDGERUNNERS</div>
                             <div>
                                 <img src="img/cdproject.png" alt="">
-                                <!-- 포토샵에서 이미지 크기조절 -->
                             </div>
                             <div>
                                 <img src="img/trigger.png" alt="">
-                                <!-- 포토샵에서 이미지 크기조절 -->
                             </div>
                         </div><!-- .down end -->
                     </div><!-- .left end -->
                     <div class="center">
-                        <!-- 설명 -->
                         <div class="info on">
                             <h4>NOW AVAILABLE ON</h4>
                             <a href="#">
@@ -469,7 +464,6 @@
                             <p>Netflix</p>
                             <p>Gallery</p>
                             <p>Glossary</p>
-                            <!-- 세로로 길게 가로정렬 -->
                         </div><!-- .list -->
                     </div><!-- .right end -->
                 </div><!-- .arti end -->
@@ -485,7 +479,6 @@
                 <div class="inner on">
                     <div class="img">
                         <div class="item">
-                            <!-- 아이템 호버하면 img 가상선택자 addclass로 줘서 배경어둡게 -->
                             <img src="img/patches1.jpg" alt="">
                         </div>
                         <div class="item">
@@ -503,7 +496,6 @@
                         <div class="item">
                             <img src="img/patches6.jpg" alt="">
                         </div>
-                        <!-- 이미지파일 -->
                     </div><!-- .img end -->
                     <div class="cont">
                         <div class="title">
@@ -553,7 +545,6 @@
                             <h3>PATCHES</h3>
                             <h3>NEWS</h3>
                             <h3>MORE NEWS</h3>
-                            <!-- 스크롤시 버튼 색상 차오르는 효과 -->
                         </div>
                         <div class="item_04">
                             <div class="big_img on">
@@ -658,7 +649,6 @@
                             <h3>PATCHES</h3>
                             <h3>NEWS</h3>
                             <h3>MORE NEWS</h3>
-                            <!-- 스크롤시 버튼 색상 차오르는 효과 -->
                         </div>
                         <div class="item_04">
                             <div class="big_img">
@@ -675,7 +665,6 @@
                 <div class="inner">
                     <div class="img">
                         <div class="item">
-                            <!-- 아이템 호버하면 img 가상선택자 addclass로 줘서 배경어둡게 -->
                             <img src="img/more1.jpg" alt="">
                         </div>
                         <div class="item">
@@ -693,7 +682,6 @@
                         <div class="item">
                             <img src="img/more6.jpg" alt="">
                         </div>
-                        <!-- 이미지파일 -->
                     </div><!-- .img end -->
                     <div class="cont">
                         <div class="title">
@@ -795,7 +783,6 @@
                             <h3>PATCHES</h3>
                             <h3>NEWS</h3>
                             <h3>MORE NEWS</h3>
-                            <!-- 스크롤시 버튼 색상 차오르는 효과 -->
                         </div>
                         <div class="item_04">
                             <div class="big_img on">
